# dln-observer-quality-quantum-darwinism

./: .gitignore  CITATION.cff  Dockerfile  LICENSE  Makefile  PLAN-fop-submission.md  README.md  REPRODUCIBILITY.md  REVIEW-foundations-of-physics-guidelines.md  REVIEW.md  paper4a_observer_quality_updated.tex  pyproject.toml  requirements.lock.txt
dln-compression-model/: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
dln-compression-model/outputs/boundary-kf/artifacts/tables/: agg_summary.csv
dln-compression-model/outputs/boundary-kf/results/: episode_metrics.csv  manifest.json
dln-compression-model/outputs/paper/artifacts/tables/: agg_summary.csv
dln-compression-model/outputs/paper/results/: episode_metrics.csv  manifest.json
dln-compression-model/outputs/recovery/artifacts/tables/: agg_summary.csv
dln-compression-model/outputs/recovery/results/: episode_metrics.csv  manifest.json
dln-compression-model/outputs/stakes-sweep/artifacts/tables/: agg_summary.csv
dln-compression-model/outputs/stakes-sweep/results/: episode_metrics.csv  manifest.json
dln-compression-model/paper/: claims.yaml  main.tex  references.bib
dln-compression-model/scripts/: test_crossover.py  verify_paper_claims.py
dln-compression-model/src/: dln_core_variable_cycle.py
dln-compression-model/src/dln_cycle/: __init__.py  agents.py  cycle.py  envs.py  metrics.py  run_experiments.py
dln-compression-model/tests/: test_ablation_smoke.py  test_math.py  test_reproducibility.py  test_scaling_small.py  test_thesis_claims.py
notebooks/: central_spin_derivations.ipynb
(+63 files in other folders)
